--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.14.0",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
     "passport": "^0.6.0",
